--- a/index.html
+++ b/index.html
@@ -1,14 +1,71 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hello World</title>
-  <link href='/style.css' rel='stylesheet'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>lineup - 도파민 3줄 요약</title>
+    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable.css" />
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hello, world!</h1>
-  <button onclick="console.log('hello');">Press me</button>
-  <script defer type="text/javascript" src="/main.js"></script>
+
+    <nav class="navbar">
+        <div class="logo">
+            <span style="color: #ff3366;">l</span>
+            <span style="color: #00bbf9;">i</span>
+            <span style="color: #fee440;">n</span>
+            <span style="color: #00f5d4;">e</span>
+            <span style="color: #9b5de5;">u</span>
+            <span style="color: #f15bb5;">p</span>
+        </div>
+        <div class="nav-icons">
+            <select id="langSelect" class="lang-select">
+                <option value="ko">🇰🇷 한국어</option>
+                <option value="en">🇺🇸 English</option>
+                <option value="ja">🇯🇵 日本語</option>
+                <option value="zh">🇨🇳 中文</option>
+            </select>
+            <button id="btn-fav">🍿 내 찜목록</button>
+            <button id="btn-login">로그인</button>
+        </div>
+    </nav>
+
+    <div class="category-bar">
+        <span class="active">🔥 지금 핫한 픽</span>
+        <span>🧠 뇌 빼고 보기 좋음</span>
+        <span>😭 오열 주의보</span>
+        <span>🔪 팝콘각 스릴러</span>
+        <span>💖 도파민 로맨스</span>
+    </div>
+
+    <div class="container">
+        <main class="main-content">
+            <div class="ad-banner">💰 상단 스폰서 배너 (구글 애드센스)</div>
+
+            <div class="search-area">
+                <h2 id="title-main">OTT 켰다가 끄는 건 그만.</h2>
+                <p id="title-sub">어떤 기분이신가요? 상황을 검색하면 lineup이 3줄 요약해 드립니다.</p>
+                <div class="input-group">
+                    <input type="text" id="searchInput" placeholder="ex) 주말에 몰아볼 존잼 복수극 찾아줘">
+                    <button id="btn-search">AI 추천받기</button>
+                </div>
+            </div>
+
+            <div id="results"></div>
+        </main>
+
+        <aside class="sidebar">
+            <div class="sticky-box">
+                <h3 id="title-recent">👀 최근 검색/조회</h3>
+                <div id="recent-list">
+                    <p style="color:#777; font-size:0.9em;">아직 기록이 없어요!</p>
+                </div>
+            </div>
+        </aside>
+    </div>
+
+    <button id="scrollTopBtn">⬆️</button>
+
+    <script src="main.js"></script>
 </body>
 </html>
