--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <span style="color: #f15bb5;">p</span>
         </div>
         <div class="nav-icons">
+            <button id="theme-toggle" title="테마 변경">🌙</button>
             <select id="langSelect" class="lang-select">
                 <option value="ko">🇰🇷 한국어</option>
                 <option value="en">🇺🇸 English</option>
